[tool.poetry]
name = "pyglfw"
version = "0.1.0"
description = "Having fun with glfw in python"
authors = ["Sébastien NICOLET <snicolet@student.42.fr>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.7"
PyGlfw = "^1.11.0"
numpy = "^1.18.3"
pyopengl = "^3.1.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
