[tool.poetry]
name = "pyfractoul"
version = "0.1.0"
description = "Having fun with glfw in python"
authors = ["Sébastien NICOLET <snicolet@student.42.fr>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
glfw = "^1.11.0"
pyopengl = "^3.1.5"
pyrr = "^0.10.3"

[tool.poetry.dev-dependencies]
mypy = "^0.770"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
